--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,10 @@
     "no-undef": "off",
     "import/prefer-default-export": "off",
     "react/forbid-prop-types": "off",
-    "no-param-reassign": "off"
+    "no-param-reassign": "off",
+    "jsx-a11y/anchor-is-valid": "off",
+    "jsx-a11y/no-static-element-interactions": "off",
+    "jsx-a11y/click-events-have-key-events": "off",
+    "react/jsx-closing-tag-location": "off"
   }
 }
